<resources>
    <string name="app_name">Zomato Guide</string>
    <string name="searchRestaurant">Search Restaurant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchLocation">Search Location</string>
    <string name="searchforLocation">Search for Your Location</string>
    <string name="savedAddresses">Saved Addresses</string>
    <string name="recentLocations">Recent Locations</string>
    <string name="gps">Use Current Location</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="rating3.0">Rating 3.0</string>
    <string name="rating4.0">Rating 4.0</string>
    <string name="moreInfo">more info</string>
    <string name="reviews">Reviews</string>
    <string name="email">Enter Email-Id</string>
    <string name="passwd">Enter Password</string>
    <string name="cnfmpasswd">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="otp">Enter OTP</string>
    <string name="skip">Skip</string>
    <string name="getStarted">Get Started</string>
    <string name="instant_validation">(instant validation)</string>

</resources>