<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/et_Email_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/et_Password_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Email_signUp"
        android:layout_margin="@dimen/dp_20"
        android:hint="@string/passwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_ConfirmPassword_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Password_signUp"
        android:layout_margin="@dimen/dp_20"
        android:hint="@string/cnfmpasswd"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_createAccount_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_ConfirmPassword_signUp"
        android:layout_centerInParent="true"
        android:background="@color/cranberryRed"
        android:text="SignUp"
        android:textColor="@color/white" />

</RelativeLayout>