<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OrderFragment">

    <SearchView
        android:id="@+id/sv_searchRestaurantMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:iconifiedByDefault="false"
        android:queryHint="@string/searchRestaurant" />


    <LinearLayout
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sv_searchRestaurantMain"
        android:layout_margin="@dimen/dp_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filterAscending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_5"
            android:background="@drawable/filters_background"
            android:drawableRight="@drawable/ic_arrow_upward"
            android:padding="@dimen/dp_5"
            android:text="@string/ascending"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:id="@+id/filterDescending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_5"
            android:background="@drawable/filters_background"
            android:drawableRight="@drawable/ic_arrow_downward"
            android:padding="@dimen/dp_5"
            android:text="@string/descending"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:id="@+id/rating3.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_5"
            android:background="@drawable/filters_background"
            android:drawableRight="@drawable/ic_add"
            android:padding="@dimen/dp_5"
            android:text="@string/rating3.0"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:id="@+id/rating4.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_5"
            android:background="@drawable/filters_background"
            android:drawableRight="@drawable/ic_add"
            android:padding="@dimen/dp_5"
            android:text="@string/rating4.0"
            android:textSize="@dimen/sp_10" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_displayCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter"
        android:layout_margin="@dimen/dp_20" />

    <ImageView
        android:id="@+id/iv_notFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_displayCity"
        android:layout_margin="@dimen/dp_5"
        android:src="@drawable/no_data_found"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_listRestaurants"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/filter" />


</RelativeLayout>